feat: add generalised node and submodel recovery
